fixed author, author visible if not your page

--- a/app/assets/stylesheets/sections/map.sass
+++ b/app/assets/stylesheets/sections/map.sass
@@ -613,61 +613,61 @@ path.leaflet-clickable
   &.turqoise
     background: #78c5d6
     border: #78c5d6 1px solid
-    border-bottom: #990033 solid 1px
+    border-bottom: rgba(0,0,0,0.3) solid 1px
     div.arrow
       border-color: #78c5d6 transparent transparent transparent
   &.blue
     background: #459ba8
     border: #459ba8 1px solid
-    border-bottom: #990033 solid 1px
+    border-bottom: rgba(0,0,0,0.3) solid 1px
     div.arrow
       border-color: #459ba8 transparent transparent transparent
   &.bluegreen
     background: #79c267
     border: #79c267 1px solid
-    border-bottom: #990033 solid 1px
+    border-bottom: rgba(0,0,0,0.3) solid 1px
     div.arrow
       border-color: #79c267 transparent transparent transparent
   &.green
     background: #c5d647
     border: #c5d647 1px solid
-    border-bottom: #990033 solid 1px
+    border-bottom: rgba(0,0,0,0.3) solid 1px
     div.arrow
       border-color: #c5d647 transparent transparent transparent
   &.yellow
     background: #f5d63d
     border: #f5d63d 1px solid
-    border-bottom: #990033 solid 1px
+    border-bottom: rgba(0,0,0,0.3) solid 1px
     div.arrow
       border-color: #f5d63d transparent transparent transparent
   &.orange
     background: #f28c33
     border: #f28c33 1px solid
-    border-bottom: #990033 solid 1px
+    border-bottom: rgba(0,0,0,0.3) solid 1px
     div.arrow
       border-color: #f28c33 transparent transparent transparent
   &.pink
     background: #e868a2
     border: #e868a2 1px solid
-    border-bottom: #990033 solid 1px
+    border-bottom: rgba(0,0,0,0.3) solid 1px
     div.arrow
       border-color: #e868a2 transparent transparent transparent
   &.magenta
     background: #bf62a6
     border: #bf62a6 1px solid
-    border-bottom: #990033 solid 1px
+    border-bottom: rgba(0,0,0,0.3) solid 1px
     div.arrow
       border-color: #bf62a6 transparent transparent transparent
   &.purple
     background: #a21cbf
     border: #a21cbf 1px solid
-    border-bottom: #990033 solid 1px
+    border-bottom: rgba(0,0,0,0.3) solid 1px
     div.arrow
       border-color: #a21cbf transparent transparent transparent
   &.gray
     background: #bdbdbd
     border: #bdbdbd 1px solid
-    border-bottom: #990033 solid 1px
+    border-bottom: rgba(0,0,0,0.3) solid 1px
     div.arrow
       border-color: #bdbdbd transparent transparent transparent
   &:hover, &.highlighted
