--- a/app/assets/stylesheets/sections/plan.sass
+++ b/app/assets/stylesheets/sections/plan.sass
@@ -89,6 +89,10 @@
     z-index: 10004
     -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 0px 0px, rgba(0, 0, 0, 0.14902) 0px 2px 7px 0px
     box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 0px 0px, rgba(0, 0, 0, 0.14902) 0px 2px 7px 0px
+    .plan-by
+      position: absolute
+      color: #aaa
+      bottom: 5px
     span.title
       display: inline-block
       color: #fff
